# PythonFinancialPlanning

./: .gitignore  README.md  app.py  pyproject.toml
.github/instructions/: coding-standards.instructions.md
.github/skills/python-coding/: SKILL.md
.github/skills/python-testing/: SKILL.md
.streamlit/: config.toml
calculations/: __init__.py  cashflow.py  net_worth.py  projections.py  property.py  retirement.py  tax.py
calculations/instruments/: __init__.py  asset.py  debt.py  goal.py  helpers.py  protocols.py
components/: charts.py  dashboard_warnings.py  forms.py  multi_step_form.py
data/: defaults.json  sample_profile.json
docs/: UK_Financial_Planning_Guide.md
models/: __init__.py  assumptions.py  financial_data.py
pages/: 1_Profile.py  2_Plan.py  2_Property.py  3_Debts.py  3_Tax.py  4_FIRE.py  4_Risk.py  5_Goals.py
tests/: __init__.py  conftest.py  test_app.py  test_calculations.py
