[project]
name = "financial-planning-playground"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy-financial>=1.0.0",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "streamlit>=1.56.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.20.0",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=8.0.0",
    "ruff>=0.15.9",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "RUF001",  # ambiguous unicode — intentional UI characters (➕, ×, –)
    "C408",    # dict() calls — conventional in plotly API
]

[tool.ruff.lint.isort]
known-first-party = ["calculations", "components", "models", "pages"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "numpy_financial",
    "streamlit.*",
    "plotly",
    "plotly.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pandas-stubs>=3.0.0.260204",
    "ruff>=0.15.9",
]
